--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -73,3 +73,12 @@ my_invisalign:
 
 hive:
   - uk.co.centrica.hive/uk.co.centrica.hive.ui.splash.SplashScreenActivity
+
+daily_deeds:
+  - com.akmal.dailydeeds/com.akmal.dailydeeds.ui.main.router.MainRouterActivity
+
+gratitude:
+  - com.northstar.gratitude/com.northstar.gratitude.firstlaunch.SplashActivity
+
+al_mashhad:
+  - com.infoarabmedia.almashhad/com.infoarabmediaapp.MainActivity
