add & update icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -82,3 +82,45 @@ gratitude:
 
 al_mashhad:
   - com.infoarabmedia.almashhad/com.infoarabmediaapp.MainActivity
+
+android_hid_client:
+  - me.arianb.usb_hid_client/me.arianb.usb_hid_client.MainActivity
+
+canta:
+  - org.samo_lego.canta/org.samo_lego.canta.MainActivity
+
+cashsense:
+  - ru.resodostudios.cashsense.debug/ru.resodostudios.cashsense.MainActivity
+
+chronos:
+  - com.meenbeese.chronos/com.meenbeese.chronos.activities.MainActivity
+
+flut_renamer:
+  - net.sunjiao.renamer/net.sunjiao.renamer.MainActivity
+
+fossify_clock:
+  - org.fossify.clock/org.fossify.clock.activities.SplashActivity.Green
+
+kernel_flasher:
+  - com.github.capntrips.kernelflasher/com.github.capntrips.kernelflasher.MainActivity
+
+newpass:
+  - com.gero.newpass/com.gero.newpass.Activities.LoginActivity
+
+p2play:
+  - org.libre.agosto.p2play/org.libre.agosto.p2play.SplashActivity
+
+piley:
+  - com.dk.piley/com.dk.piley.MainActivity
+
+singbox:
+  - io.nekohasekai.sfa/io.nekohasekai.sfa.ui.MainActivity
+
+text_tools:
+  - com.corphish.quicktools/com.corphish.quicktools.activities.MainActivity
+
+transcribro:
+  - dev.soupslurpr.transcribro/dev.soupslurpr.transcribro.MainActivity
+
+wallpaperexport:
+  - com.github.cvzi.wallpaperexport/com.github.cvzi.wallpaperexport.MainActivity
