--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -124,3 +124,6 @@ transcribro:
 
 wallpaperexport:
   - com.github.cvzi.wallpaperexport/com.github.cvzi.wallpaperexport.MainActivity
+
+musicsearch:
+  - io.github.lydavid.musicsearch/ly.david.mbjc.MainActivity
