--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,4 +10,13 @@
 #
 
 bilt_rewards:
-    - com.biltrewards.bilt/com.biltrewards.bilt.MainActivity
+  - com.biltrewards.bilt/com.biltrewards.bilt.MainActivity
+
+accord:
+  - org.akanework.accord/org.akanework.gramophone.ui.MainActivity
+
+positional:
+  - io.trewartha.positional/io.trewartha.positional.ui.MainActivity
+
+echo:
+  - dev.brahmkshatriya.echo/dev.brahmkshatriya.echo.newui.MainActivity2
