Add ComponentInfo for Gadgetbridge Nightly and DevCheck

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,9 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+gadgetbridge:
+    - nodomain.freeyourgadget.gadgetbridge.nightly/nodomain.freeyourgadget.gadgetbridge.activities.ControlCenterv2
+    
+devcheck:
+    - flar2.devcheck/flar2.devcheck.MainActivity
