add icon & componentinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,9 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+echo:
+  - dev.brahmkshatriya.echo/dev.brahmkshatriya.echo.ui.MainActivity2
+
+mihon_preview:
+  - app.mihon.debug/eu.kanade.tachiyomi.ui.main.MainActivity
