--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -10,7 +10,37 @@
 #
 
 gadgetbridge:
-    - nodomain.freeyourgadget.gadgetbridge.nightly/nodomain.freeyourgadget.gadgetbridge.activities.ControlCenterv2
+  - nodomain.freeyourgadget.gadgetbridge.nightly/nodomain.freeyourgadget.gadgetbridge.activities.ControlCenterv2
     
 devcheck:
-    - flar2.devcheck/flar2.devcheck.MainActivity
+  - flar2.devcheck/flar2.devcheck.MainActivity
+
+bura:
+  - com.davidtakac.bura/com.davidtakac.bura.MainActivity
+
+droiddash:
+  - com.yangdai.droiddash/com.yangdai.droiddash.MainActivity
+
+etopa:
+  - de.ltheinrich.etopa/de.ltheinrich.etopa.MainActivity
+
+heliboard:
+  - helium314.keyboard/helium314.keyboard.latin.setup.SetupActivity
+
+imagecraft:
+  - com.yangdai.imagecraft/com.yangdai.imagecraft.main.MainActivity
+
+json_list:
+  - com.sjapps.jsonlist/com.sjapps.jsonlist.MainActivity
+
+metadator:
+  - com.bobbyesp.metadator/com.bobbyesp.metadator.MainActivity
+
+multi_calculator:
+  - com.yangdai.calc/com.yangdai.calc.main.MainActivity
+
+open_note:
+  - com.yangdai.opennote/com.yangdai.opennote.MainActivity
+
+retro_tetris:
+  - com.yangdai.tetris/com.yangdai.tetris.MainActivity
