Add Superloop (AU ISP)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -47,3 +47,6 @@ retro_tetris:
 
 oxygen_updater:
   - com.arjanvlek.oxygenupdater/com.oxygenupdater.activities.MainActivity
+
+superloop:
+  - com.superloop.app/com.superloop.app.MainActivity
