--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -44,3 +44,9 @@ open_note:
 
 retro_tetris:
   - com.yangdai.tetris/com.yangdai.tetris.MainActivity
+
+oxygen_updater:
+  - com.arjanvlek.oxygenupdater/com.oxygenupdater.activities.MainActivity
+
+superloop:
+  - com.superloop.app/com.superloop.app.MainActivity
