add icon & componentinfo (#837)
* add icon & componentinfo

* add icons

---------

Co-authored-by: GitGitro <108683123+GitGitro@users.noreply.github.com>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -9,6 +9,11 @@
 # new_icon_2_alt_1: {}
 #
 
+mihon_preview:
+  - app.mihon.debug/eu.kanade.tachiyomi.ui.main.MainActivity
+
+mihon_preview_alt_1: {}
+
 gadgetbridge:
   - nodomain.freeyourgadget.gadgetbridge.nightly/nodomain.freeyourgadget.gadgetbridge.activities.ControlCenterv2
     
