--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -55,3 +55,15 @@ oxygen_updater:
 
 superloop:
   - com.superloop.app/com.superloop.app.MainActivity
+
+local_material_notes:
+  - com.maelchiotti.localmaterialnotes/com.maelchiotti.localmaterialnotes.MainActivity
+
+remyn:
+  - com.mahersafadi.remyn/com.example.remyn.MainActivity
+
+soothing_noise_looper:
+  - ie.delilahsthings.soothingloop/ie.delilahsthings.soothingloop.MainActivity
+
+touch_the_notch:
+  - com.notch.touch/com.notch.touch.ui.Sa
