add Todopad icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,3 +67,6 @@ soothing_noise_looper:
 
 touch_the_notch:
   - com.notch.touch/com.notch.touch.ui.Sa
+
+todopad:
+  - com.example.flutter_riverpod_todo_app/com.example.flutter_riverpod_todo_app.MainActivity
