--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -67,3 +67,9 @@ soothing_noise_looper:
 
 touch_the_notch:
   - com.notch.touch/com.notch.touch.ui.Sa
+
+ytdlnis:
+  - com.deniscerri.ytdl/com.deniscerri.ytdl.Default
+
+echo:
+  - dev.brahmkshatriya.echo/dev.brahmkshatriya.echo.MainActivity
