--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,5 +68,11 @@ soothing_noise_looper:
 touch_the_notch:
   - com.notch.touch/com.notch.touch.ui.Sa
 
+ytdlnis:
+  - com.deniscerri.ytdl/com.deniscerri.ytdl.Default
+
+echo:
+  - dev.brahmkshatriya.echo/dev.brahmkshatriya.echo.MainActivity
+
 todopad:
   - com.example.flutter_riverpod_todo_app/com.example.flutter_riverpod_todo_app.MainActivity
