--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -76,3 +76,8 @@ echo:
 
 todopad:
   - com.example.flutter_riverpod_todo_app/com.example.flutter_riverpod_todo_app.MainActivity
+
+cantook:
+  - com.aldiko.android/com.demarque.android.ui.splash.SplashActivity
+  - com.aldiko.android/com.demarque.android.ui.splash_welcome.SplashActivity
+  - com.aldiko.android/com.aldiko.android.ui.AliasHomeScreen
