--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -91,7 +91,7 @@ keepass_fidelty:
 keypass:
   - com.yogeshpaliyal.keypass/com.yogeshpaliyal.keypass.ui.nav.DashboardComposeActivity
 
-mirror:
+mirror_foss:
   - com.polar.mirror/com.polar.mirror.MainActivity
 
 sekreto:
