--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -81,3 +81,24 @@ cantook:
   - com.aldiko.android/com.demarque.android.ui.splash.SplashActivity
   - com.aldiko.android/com.demarque.android.ui.splash_welcome.SplashActivity
   - com.aldiko.android/com.aldiko.android.ui.AliasHomeScreen
+
+blitz_fitscher_chess_clock:
+  - net.leodesouza.blitz/net.leodesouza.blitz.MainActivity
+
+keepass_fidelty:
+  - net.helcel.fidelity/net.helcel.fidelity.activity.MainActivity
+
+keypass:
+  - com.yogeshpaliyal.keypass/com.yogeshpaliyal.keypass.ui.nav.DashboardComposeActivity
+
+mirror_foss:
+  - com.polar.mirror/com.polar.mirror.MainActivity
+
+sekreto:
+  - com.example.sekreto/com.example.sekreto.MainActivity
+
+swiftbackupprem:
+  - io.github.juby210.swiftbackupprem/io.github.juby210.swiftbackupprem.MainActivity
+
+xpensor:
+  - com.jxareas.xpensor/com.jxareas.xpensor.features.authentication.presentation.ui.AuthenticationActivity
