--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 gpstest:
   - com.android.gpstest.osmdroid/com.android.gpstest.ui.MainActivity
+
+gog:
+  - io.chthonic.gog.client/io.chthonic.gog.client.ui.activity.MainActivity
