--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,12 @@ gpstest:
 
 gog:
   - io.chthonic.gog.client/io.chthonic.gog.client.ui.activity.MainActivity
+
+jump_plus:
+  - com.access_company.android.sh_jumpplus/giga.app.MainActivity
+
+mister_donut:
+  - jp.co.duskin.misdocardapps/jp.co.duskin.misdocardapps.MainActivity
+
+kfc:
+  - jp.dreambrain.adiorama/com.cognizantorderserv.kfcindiadroid.MainActivity
