Add "EXPO Wallet" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ mister_donut:
 
 kfc:
   - jp.dreambrain.adiorama/com.cognizantorderserv.kfcindiadroid.MainActivity
+
+expo_wallet:
+  - io.hashport.hashwallet/io.hashport.hashwallet.MainActivity
