Add "miria" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -26,3 +26,6 @@ kfc:
 
 expo_wallet:
   - io.hashport.hashwallet/io.hashport.hashwallet.MainActivity
+
+miria:
+  - info.shiosyakeyakini.miria/info.shiosyakeyakini.miria.MainActivity
