add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,9 @@ gpstest:
 
 gog:
   - io.chthonic.gog.client/io.chthonic.gog.client.ui.activity.MainActivity
+
+ytdlnis:
+  - com.deniscerri.ytdl/com.deniscerri.ytdl.Default
+
+ozon:
+  - ru.ozon.app.android/ru.ozon.app.android.ui.start.AppHostActivity
