add Haley's icons

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,12 @@ ytdlnis:
 
 ozon:
   - ru.ozon.app.android/ru.ozon.app.android.ui.start.AppHostActivity
+
+yahoo_japan_transit:
+  - jp.co.yahoo.android.apps.transit/jp.co.yahoo.android.apps.transit.Transit
+
+tver:
+  - jp.hamitv.hamiand1/jp.hamitv.hamiand1.tver.ui.activities.MainActivity
+
+jtx:
+  - at.techbee.jtx/at.techbee.jtx.MainActivity2
