Add 2 icons & Update ComponentInfo (#847)
* Update new_icons.yaml for 3 exists apps

* Add "EXPO Wallet" icon

* Add "miria" icon

* Update contributors.xml

* update icons

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,18 @@ gpstest:
 
 gog:
   - io.chthonic.gog.client/io.chthonic.gog.client.ui.activity.MainActivity
+
+jump_plus:
+  - com.access_company.android.sh_jumpplus/giga.app.MainActivity
+
+mister_donut:
+  - jp.co.duskin.misdocardapps/jp.co.duskin.misdocardapps.MainActivity
+
+kfc:
+  - jp.dreambrain.adiorama/com.cognizantorderserv.kfcindiadroid.MainActivity
+
+expo_wallet:
+  - io.hashport.hashwallet/io.hashport.hashwallet.MainActivity
+
+miria:
+  - info.shiosyakeyakini.miria/info.shiosyakeyakini.miria.MainActivity
