--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,15 @@ expo_wallet:
 
 miria:
   - info.shiosyakeyakini.miria/info.shiosyakeyakini.miria.MainActivity
+
+ozon:
+  - ru.ozon.app.android/ru.ozon.app.android.ui.start.AppHostActivity
+
+yahoo_japan_transit:
+  - jp.co.yahoo.android.apps.transit/jp.co.yahoo.android.apps.transit.Transit
+
+tver:
+  - jp.hamitv.hamiand1/jp.hamitv.hamiand1.tver.ui.activities.MainActivity
+
+jtx:
+  - at.techbee.jtx/at.techbee.jtx.MainActivity2
