Update CompInfo for Uniqlo AU, Up Bank and the ATO app

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -41,3 +41,12 @@ tver:
 
 jtx:
   - at.techbee.jtx/at.techbee.jtx.MainActivity2
+
+uniqlo:
+  - com.uniqlo.au.catalogue/com.uniqlo.ja.catalogue.view.mobile.startup.StartupActivity
+
+ato:
+  - au.gov.ato.ATOTax/crc6476df41b255b25334.MainActivity
+
+up_banking:
+  - au.com.up.money/au.com.up.money.MainActivityDefault
