--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -50,3 +50,6 @@ ato:
 
 up_banking:
   - au.com.up.money/au.com.up.money.MainActivityDefault
+
+youi:
+  - youi.clientapp/crc64935b08ffb5114f6c.SplashScreen
