--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,20 @@
 #
 # new_icon_2_alt_1: {}
 #
+apkupdater:
+    - com.apkupdater.ci/com.apkupdater.ui.activity.MainActivity
+
+camera:
+    - com.google.android.GoogleCameraLMC88/com.android.camera.CameraLauncher
+    
+image_toolbox:
+    - ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.app.presentation.AppActivity
+    
+philips_tv_remote:
+    - com.tpvision.philipstvapp2/com.tpvision.philipstvapp2.JeevesLauncherActivity
+    
+stocks_widget:
+    - com.stock.widget/com.stock.widget.activity.home.HomeActivity
+    
+yemeksepeti:
+    - com.inovel.app.yemeksepeti/com.deliveryhero.homescreen.container.ui.compose.UserHomeContainerComposeActivity
