Match up existing icons to the Netflix game library (#852)
Co-authored-by: Luke Wong <luke@hausofwong.com>
Co-authored-by: GitGitro <108683123+GitGitro@users.noreply.github.com>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,6 +8,31 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+bloons_td_six:
+  - com.netflix.NGP.BloonsTDSix/com.unity3d.player.UnityPlayerActivity
+
+world_of_goo:
+  - com.netflix.NGP.WorldofGooHD/com.twodboy.wog.MainActivity
+
+game_dev_tycoon:
+  - com.netflix.NGP.GameDevTycoon/com.unity3d.player.UnityPlayerActivity
+
+gta_iii:
+  - com.netflix.NGP.GTAIIIDefinitiveEdition/com.epicgames.ue4.GameActivity
+
+gta_vice_city:
+  - com.netflix.NGP.GTAViceCityDefinitiveEdition/com.epicgames.ue4.GameActivity
+
+gta_san_andreas:
+  - com.netflix.NGP.GTASanAndreasDefinitiveEdition/com.epicgames.ue4.GameActivity
+
+dead_cells:
+  - com.netflix.NGP.DeadCellsReturnToCastlevania/com.playdigious.deadcells.mobile.DeadCellsLoading
+
+cats_and_soup:
+  - com.netflix.NGP.CatsSoup/com.unity3d.player.UnityPlayerActivity
+
 apkupdater:
     - com.apkupdater.ci/com.apkupdater.ui.activity.MainActivity
 
