--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,3 +68,15 @@ raven:
 
 recording_webcam:
   - com.box.project.recording_app/com.box.project.recording_app.MainActivity
+
+briar_mailbox:
+  - org.briarproject.mailbox/org.briarproject.mailbox.android.ui.MainActivity
+
+fossify_notes:
+  - org.fossify.notes/org.fossify.notes.activities.SplashActivity.Green
+
+launch_chat:
+  - org.vinaygopinath.launchchat/org.vinaygopinath.launchchat.screens.main.MainActivity
+
+timed_silence:
+  - de.felixnuesse.timedsilence/de.felixnuesse.timedsilence.MainActivity
