--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,20 @@ launch_chat:
 
 timed_silence:
   - de.felixnuesse.timedsilence/de.felixnuesse.timedsilence.MainActivity
+
+poe_alt_1: {}
+
+pdb_alt_1: {}
+
+drinkies:
+  - com.drinkies/com.drinkies.activities.SplashActivity
+
+mashreq:
+  - com.vipera.ts.starter.MashreqAE/com.mashreqmobileapp.SplashActivity
+  - com.vipera.ts.starter.MashreqEG/com.mashreqmobileapp.SplashActivity
+
+pdb_classic:
+  - mbti.test.mental.health.personality/pdb.app.LauncherActivity
+
+yango_play:
+  - com.yango.saft/com.yango.saft.host.internal.host.impl.ui.LauncherActivity
