--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -97,3 +97,18 @@ pdb_classic:
 
 yango_play:
   - com.yango.saft/com.yango.saft.host.internal.host.impl.ui.LauncherActivity
+
+android_owner:
+  - com.binbin.androidowner/com.binbin.androidowner.MainActivity
+
+android_virtual_pen:
+  - com.virtual_pen/com.virtual_pen.MainActivity
+
+hot_stuff:
+  - com.hotstuff/com.hotstuff.ui.MainActivity
+
+logger:
+  - com.logger.app/com.logger.app.MainActivity
+
+lumi_ai:
+  - com.looper.vic/com.looper.vic.activity.MainActivity
