--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -127,3 +127,9 @@ speedometer:
 
 stream_player:
   - nl.sonck.streamplayer/nl.sonck.streamplayer.MainActivity
+
+polytech_edt:
+  - fr.thissma.adePolytech/fr.thissma.adePolytech.MainActivity
+
+voice_tools:
+  - com.DevExtras.VoiceTools/crc6424aa7cfad14660ae.SplashActivity
