--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -112,3 +112,24 @@ logger:
 
 lumi_ai:
   - com.looper.vic/com.looper.vic.activity.MainActivity
+
+flexify:
+  - com.presley.flexify/com.presley.flexify.MainActivity
+
+maid:
+  - com.danemadsen.maid/com.danemadsen.maid.MainActivity
+
+nekoflix:
+  - com.nekoflix/com.nekoflix.MainActivity
+
+speedometer:
+  - ch.rmy.android.statusbar_tacho/ch.rmy.android.statusbar_tacho.activities.SettingsActivity
+
+stream_player:
+  - nl.sonck.streamplayer/nl.sonck.streamplayer.MainActivity
+
+polytech_edt:
+  - fr.thissma.adePolytech/fr.thissma.adePolytech.MainActivity
+
+voice_tools:
+  - com.DevExtras.VoiceTools/crc6424aa7cfad14660ae.SplashActivity
