Add "Arte Japanese Input" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -18,3 +18,6 @@ sushiro:
 the_battle_cats:
   - jp.co.ponos.battlecats/jp.co.ponos.battlecats.MyActivity
 
+arte_japanese_input:
+  - com.uminekodesign.mozc.arte/org.mozc.android.inputmethod.japanese.LauncherActivity
+  - com.uminekodesign.arte.mozc/org.mozc.android.inputmethod.japanese.LauncherActivity
