Add icon & Update ComponentInfo (#858)
* Update new_icons.yaml for 6 apps

* Add "Arte Japanese Input" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,16 @@
 #
 # new_icon_2_alt_1: {}
 #
+sushiro:
+  - hk.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
+  - tw.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
+  - id.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
+  - sg.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
+  - th.co.akindo_sushiro.sushiroapp/jp.co.sushiro.activity.MainActivity
+
+the_battle_cats:
+  - jp.co.ponos.battlecats/jp.co.ponos.battlecats.MyActivity
+
+arte_japanese_input:
+  - com.uminekodesign.mozc.arte/org.mozc.android.inputmethod.japanese.LauncherActivity
+  - com.uminekodesign.arte.mozc/org.mozc.android.inputmethod.japanese.LauncherActivity
