--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -21,3 +21,13 @@ the_battle_cats:
 arte_japanese_input:
   - com.uminekodesign.mozc.arte/org.mozc.android.inputmethod.japanese.LauncherActivity
   - com.uminekodesign.arte.mozc/org.mozc.android.inputmethod.japanese.LauncherActivity
+
+lyricistant:
+  - com.wardellbagby.lyricistant/com.wardellbagby.lyricistant.MainActivity
+
+noti:
+  - com.gustavoas.noti.dogfood/com.gustavoas.noti.SettingsActivity
+  - com.gustavoas.noti/com.gustavoas.noti.SettingsActivity
+
+tabs_lite:
+  - com.gbros.tabslite/com.gbros.tabslite.HomeActivity
