--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,6 +35,8 @@ tabs_lite:
 afterpay:
   - com.afterpaymobile.us/com.afterpaymobile.MainActivity
 
+afterpay_alt_1: {}
+
 bookmory:
   - net.tonysoft.bookmory/net.tonysoft.bookmory.MainActivity
 
@@ -53,7 +55,7 @@ gopeed:
 ruter:
   - no.ruter.reise/no.ruter.app.feature.startup.StartupActivity
 
-spectrum:
+my_spectrum:
   - com.brighthouse.mybhn/md536f5ec957483276a291e1b5ea5f9dc5d.SplashScreenActivity
 
 xfolder:
