--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -31,3 +31,35 @@ noti:
 
 tabs_lite:
   - com.gbros.tabslite/com.gbros.tabslite.HomeActivity
+
+afterpay:
+  - com.afterpaymobile.us/com.afterpaymobile.MainActivity
+
+afterpay_alt_1: {}
+
+bookmory:
+  - net.tonysoft.bookmory/net.tonysoft.bookmory.MainActivity
+
+borrowell:
+  - com.borrowell.strangelove/com.borrowell.strangelove.MainActivity
+
+buy_me_a_coffee:
+  - app.buymeacoffee/app.buymeacoffee.MainActivity
+
+darkinator:
+  - com.tfuerholzer.darkmodewallpaper/com.tfuerholzer.darkmodewallpaper.activities.MainActivity
+
+gopeed:
+  - com.gopeed/com.gopeed.MainActivity
+
+ruter:
+  - no.ruter.reise/no.ruter.app.feature.startup.StartupActivity
+
+my_spectrum:
+  - com.brighthouse.mybhn/md536f5ec957483276a291e1b5ea5f9dc5d.SplashScreenActivity
+
+xfolder:
+  - files.fileexplorer.filemanager/filemanger.manager.iostudio.manager.SplashActivity
+
+ziraat_mobile:
+  - com.ziraat.ziraatmobil/com.ziraat.ziraatmobile.SplashActivity
