--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -63,3 +63,9 @@ xfolder:
 
 ziraat_mobile:
   - com.ziraat.ziraatmobil/com.ziraat.ziraatmobile.SplashActivity
+
+game_of_life:
+  - com.jobik.gameoflife/com.jobik.gameoflife.activity.MainActivity
+
+shkiper:
+  - com.jobik.shkiper/com.jobik.shkiper.activity.SplashActivity
