--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -69,3 +69,48 @@ game_of_life:
 
 shkiper:
   - com.jobik.shkiper/com.jobik.shkiper.activity.SplashActivity
+
+bancaribe_digital:
+  - bancaribe.miconexion/bancaribe.miconexion.MainActivity
+
+c24_bank:
+  - de.c24.bankapp/de.check24.c24.pages.startup.SplashScreenActivity
+
+darker:
+  - com.mlhg.screenfilter/com.mlhg.activities.ToggleActivity
+
+e1547:
+  - net.e1547/net.e1547.MainActivity
+
+focusreader:
+  - allen.town.focus.reader/allen.town.focus.reader.ui.activity.SplashActivity
+
+istanbulkart:
+  - com.belbim.istanbulkart/com.belbim.istanbulkart.MainActivity
+
+medal_tv:
+  - tv.medal.recorder/tv.medal.ui.LaunchActivity
+
+mynaportal:
+  - jp.go.cas.mpa/jp.go.cas.mpa.presentation.view.eventcontrol.EventControlActivity
+
+npr:
+  - org.npr.android.news/org.npr.one.StartActivity
+
+sling:
+  - com.gangverk.sling/com.gangverk.sling.MainActivity
+
+slopes:
+  - com.consumedbycode.slopes/com.consumedbycode.slopes.MainActivity
+
+todaytix:
+  - com.todaytix.TodayTix/com.todaytix.TodayTix.activity.MainActivity
+
+volumee:
+  - app.maslanka.volumee/app.maslanka.volumee.ui.SplashActivity
+
+zepto:
+  - com.zeptoconsumerapp/com.zeptoconsumerapp.MainActivity
+
+znanylekarz:
+  - pl.znanylekarz/com.app.MainActivity
