new compinfo: AOSP Mods (Pixel Xpert)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -11,3 +11,6 @@
 
 comic_geeks:
   - com.LeagueofComicGeeks.app2/com.LeagueofComicGeeks.app2.MainActivity
+
+aosp_mods:
+  - sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivityNormalIcon
