new icon: Positional

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -14,3 +14,6 @@ comic_geeks:
 
 aosp_mods:
   - sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivityNormalIcon
+
+positional_simple:
+  - app.simple.positional/app.simple.positional.activities.alias.IconOneAlias
