new icon: Dellin

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ aosp_mods:
 
 positional_simple:
   - app.simple.positional/app.simple.positional.activities.alias.IconOneAlias
+
+dellin:
+  - ru.dellin.cabinet/ru.dellin.cabinet.ui.activity.DrawerActivity
