--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ positional_simple:
 
 dellin:
   - ru.dellin.cabinet/ru.dellin.cabinet.ui.activity.DrawerActivity
+
+okko:
+  - ru.more.play/ru.okko.mobile.app.internal.presentation.RootActivity
