new icons: Tinkoff (and updates for existing ones)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,12 @@ dellin:
 
 okko:
   - ru.more.play/ru.okko.mobile.app.internal.presentation.RootActivity
+
+tinkoff_work:
+  - ru.tinkoff.twork/ru.tinkoff.twork.activity.HostActivity
+
+tinkoff_business:
+  - ru.tinkoff.sme/ru.tinkoff.sme.start.StartActivity
+
+tinkoff_agent:
+  - ru.tinkoff.magent/ru.tinkoff.magent.application.ui.splash.SplashActivity
