--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,27 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+comic_geeks:
+  - com.LeagueofComicGeeks.app2/com.LeagueofComicGeeks.app2.MainActivity
+
+aosp_mods:
+  - sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivityNormalIcon
+
+positional_simple:
+  - app.simple.positional/app.simple.positional.activities.alias.IconOneAlias
+
+dellin:
+  - ru.dellin.cabinet/ru.dellin.cabinet.ui.activity.DrawerActivity
+
+okko:
+  - ru.more.play/ru.okko.mobile.app.internal.presentation.RootActivity
+
+tinkoff_work:
+  - ru.tinkoff.twork/ru.tinkoff.twork.activity.HostActivity
+
+tinkoff_business:
+  - ru.tinkoff.sme/ru.tinkoff.sme.start.StartActivity
+
+tinkoff_agent:
+  - ru.tinkoff.magent/ru.tinkoff.magent.application.ui.splash.SplashActivity
