--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,15 @@ tinkoff_business:
 
 tinkoff_agent:
   - ru.tinkoff.magent/ru.tinkoff.magent.application.ui.splash.SplashActivity
+
+karma_firewall:
+  - net.stargw.fok/net.stargw.karma.ActivityMain
+
+kitsune:
+  - io.github.drumber.kitsune/io.github.drumber.kitsune.ui.main.MainActivity
+
+sms_forwarder:
+  - tech.bogomolov.incomingsmsgateway/tech.bogomolov.incomingsmsgateway.MainActivity
+
+bunny_manager:
+  - io.github.pyoncord.manager/dev.beefers.vendetta.manager.ui.activity.MainActivity
