--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -44,3 +44,6 @@ sms_forwarder:
 
 bunny_manager:
   - io.github.pyoncord.manager/dev.beefers.vendetta.manager.ui.activity.MainActivity
+
+wa_mods:
+  - com.wmods.wppenhacer/com.wmods.wppenhacer.MainActivity
