--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -47,3 +47,9 @@ bunny_manager:
 
 wa_mods:
   - com.wmods.wppenhacer/com.wmods.wppenhacer.MainActivity
+
+ffupdater:
+  - de.marmaro.krt.ffupdater/de.marmaro.krt.ffupdater.activity.main.MainActivity
+
+neo_launcher:
+  - com.saggitt.omega/com.saggitt.omega.NeoLauncher
