--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -53,3 +53,39 @@ ffupdater:
 
 neo_launcher:
   - com.saggitt.omega/com.saggitt.omega.NeoLauncher
+
+epic_pay:
+  - com.cypherstack.epicpay/com.cypherstack.epicpay.MainActivity
+
+feeder_co:
+  - feeder.co/feeder.co.MainActivity
+
+flashdim:
+  - com.cyb3rko.flashdim/com.cyb3rko.flashdim.activities.MainActivity
+
+giallo_zafferano:
+  - it.banzai.media.gzricette/it.banzai.media.gzricette.MainActivity
+
+mountain_project:
+  - com.mountainproject.android/com.mountainproject.android.activity.SplashActivity
+
+network_speed_test:
+  - com.paget96.netspeedindicator/com.paget96.netspeedindicator.activities.SplashScreen
+
+op_autoclicker:
+  - com.opautoclicker.autoclicker/com.opautoclicker.autoclicker.activities.MainActivity
+
+seedvault:
+  - com.stevesoltys.seedvault/com.stevesoltys.seedvault.settings.SettingsLink
+
+service_now_agent:
+  - com.servicenow.fulfiller/com.servicenow.mobilesky.LaunchActivity
+
+stack_duo:
+  - com.cypherstack.stackduo/com.cypherstack.stackduo.MainActivity
+
+the_space_cinema:
+  - it.thespacecinema.android/crc640b9672b1015d97c5.MainActivity
+
+threema_on_prem:
+  - ch.threema.app.onprem/ch.threema.app.activities.MainActivity
