--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -89,3 +89,9 @@ the_space_cinema:
 
 threema_on_prem:
   - ch.threema.app.onprem/ch.threema.app.activities.MainActivity
+
+imo:
+  - com.imo.android.imoimbeta/com.imo.android.imoim.home.Home
+
+freestyle_librelink:
+  - com.freestylelibre.app.it/com.librelink.app.ui.SplashActivity
