add icons by Ambi on Discord

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,9 @@ imo:
 
 freestyle_librelink:
   - com.freestylelibre.app.it/com.librelink.app.ui.SplashActivity
+
+pulse_by_zerodha:
+  - com.zerodha.pulse/com.zerodha.pulse.MainActivity
+
+varsity:
+  - com.zerodha.varsity/com.zerodha.varsity.MainActivity
