add componentinfo by Ambi on Discord

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,3 +101,6 @@ pulse_by_zerodha:
 
 varsity:
   - com.zerodha.varsity/com.zerodha.varsity.MainActivity
+
+fm_radio:
+  - com.miui.fm/com.miui.fmradio.activity.LauncherActivity
