add icons&componentinfo by Ambi on Discord (#869)
* add icons by Ambi on Discord

* add componentinfo by Ambi on Discord

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,12 @@ imo:
 
 freestyle_librelink:
   - com.freestylelibre.app.it/com.librelink.app.ui.SplashActivity
+
+pulse_by_zerodha:
+  - com.zerodha.pulse/com.zerodha.pulse.MainActivity
+
+varsity:
+  - com.zerodha.varsity/com.zerodha.varsity.MainActivity
+
+fm_radio:
+  - com.miui.fm/com.miui.fmradio.activity.LauncherActivity
