--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,12 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+veggie_garden_planner:
+  - com.bentosoftware.gartenplaner/com.bentosoftware.gartenplaner.SplashScreenActivity
+
+sonos:
+  - com.sonos.acr2/com.sonos.passport.ui.launcheractivity.LauncherActivity
+
+calendar:
+  - com.samsung.android.calendar/com.samsung.android.app.calendar.activity.MainActivity
