new icon: Disroot

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -17,3 +17,6 @@ sonos:
 
 calendar:
   - com.samsung.android.calendar/com.samsung.android.app.calendar.activity.MainActivity
+
+disroot:
+  - org.disroot.disrootapp/org.disroot.disrootapp.ui.SplashScreenActivity
