new icon: Chestny Znak

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ calendar:
 
 disroot:
   - org.disroot.disrootapp/org.disroot.disrootapp.ui.SplashScreenActivity
+
+chestny_znak:
+  - ru.crptech.mark/com.app.checker.view.screen.splash.SplashActivity
