new icon: OZON Bank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ disroot:
 
 chestny_znak:
   - ru.crptech.mark/com.app.checker.view.screen.splash.SplashActivity
+
+ozon_bank:
+  - ru.ozon.fintech.finance/ru.ozon.fintech.features.tabber.presentation.finance.FinanceActivity
