new icon: Gold Apple

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -26,3 +26,6 @@ chestny_znak:
 
 ozon_bank:
   - ru.ozon.fintech.finance/ru.ozon.fintech.features.tabber.presentation.finance.FinanceActivity
+
+gold_apple:
+  - goldapple.ru.goldapple.customers/goldapple.ru.goldapple.customers.presentation.MainActivity
