new icon: Novikombank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,6 @@ ozon_bank:
 
 gold_apple:
   - goldapple.ru.goldapple.customers/goldapple.ru.goldapple.customers.presentation.MainActivity
+
+novikombank:
+  - com.bssys.novikomretail/com.bssys.novikomretail.MainActivity
