--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,27 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+veggie_garden_planner:
+  - com.bentosoftware.gartenplaner/com.bentosoftware.gartenplaner.SplashScreenActivity
+
+sonos:
+  - com.sonos.acr2/com.sonos.passport.ui.launcheractivity.LauncherActivity
+
+calendar:
+  - com.samsung.android.calendar/com.samsung.android.app.calendar.activity.MainActivity
+
+disroot:
+  - org.disroot.disrootapp/org.disroot.disrootapp.ui.SplashScreenActivity
+
+chestny_znak:
+  - ru.crptech.mark/com.app.checker.view.screen.splash.SplashActivity
+
+ozon_bank:
+  - ru.ozon.fintech.finance/ru.ozon.fintech.features.tabber.presentation.finance.FinanceActivity
+
+gold_apple:
+  - goldapple.ru.goldapple.customers/goldapple.ru.goldapple.customers.presentation.MainActivity
+
+novikombank:
+  - com.bssys.novikomretail/com.bssys.novikomretail.MainActivity
