--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,28 @@ gold_apple:
 
 novikombank:
   - com.bssys.novikomretail/com.bssys.novikomretail.MainActivity
+
+
+bitwarden_authenticator:
+  - com.bitwarden.authenticator/com.bitwarden.authenticator.MainActivity
+
+cofi:
+  - com.omelan.cofi/com.omelan.cofi.MainActivity
+
+essential_meditation:
+  - com.nyxkn.meditation/com.nyxkn.meditation.MainActivity
+
+hunch:
+  - social.hunch.app/social.hunch.app.MainActivity
+
+kenko:
+  - com.looker.kenko/com.looker.kenko.ui.MainActivity
+
+materialious:
+  - us.materialio.app/us.materialio.app.MainActivity
+
+raccoon_for_lemmy:
+  - com.github.diegoberaldin.raccoonforlemmy.android/com.github.diegoberaldin.raccoonforlemmy.android.MainActivity
+
+simple_reboot:
+  - simple.reboot.com/simple.reboot.com.MainActivity
