--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,7 +33,6 @@ gold_apple:
 novikombank:
   - com.bssys.novikomretail/com.bssys.novikomretail.MainActivity
 
-
 bitwarden_authenticator:
   - com.bitwarden.authenticator/com.bitwarden.authenticator.MainActivity
 
@@ -57,3 +56,9 @@ raccoon_for_lemmy:
 
 simple_reboot:
   - simple.reboot.com/simple.reboot.com.MainActivity
+
+washington_post:
+  - com.washingtonpost.android/com.wapo.flagship.MainActivity
+
+owndroid:
+  - com.bintianqi.owndroid/com.bintianqi.owndroid.MainActivity
