--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -62,3 +62,15 @@ washington_post:
 
 owndroid:
   - com.bintianqi.owndroid/com.bintianqi.owndroid.MainActivity
+
+obtainium:
+  - dev.imranr.obtainium.fdroid/dev.imranr.obtainium.MainActivity
+
+proton_pass:
+  - proton.android.pass.fdroid/proton.android.pass.ui.MainActivity
+
+linksheet:
+  - fe.linksheet.nightly/fe.linksheet.activity.main.MainActivity
+
+camera:
+  - org.codeaurora.snapcar/com.android.camera.CameraLauncher
