Update new_icons.yaml (Pepper)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -74,3 +74,9 @@ linksheet:
 
 camera:
   - org.codeaurora.snapcar/com.android.camera.CameraLauncher
+
+pepper:
+  - com.tippingcanoe.peppernl/com.pepper.apps.android.presentation.MainActivityDarkIcon
+  - com.chollometro/com.pepper.apps.android.presentation.MainActivityDarkIcon
+  - se.pepperdeals/com.pepper.apps.android.presentation.MainActivityDarkIcon
+  - it.pepper/com.pepper.apps.android.presentation.MainActivityDarkIcon
