Add "FamilyMart" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -80,3 +80,8 @@ pepper:
   - com.chollometro/com.pepper.apps.android.presentation.MainActivityDarkIcon
   - se.pepperdeals/com.pepper.apps.android.presentation.MainActivityDarkIcon
   - it.pepper/com.pepper.apps.android.presentation.MainActivityDarkIcon
+
+familymart:
+  - grasea.familife/xe.UF
+  - com.maxincome.fmcrm/com.maxincome.fmonline.Activity.MainActivity
+  - jp.co.family.familymart_app/jp.co.family.familymart.presentation.splash.SplashActivity
