Add "NowPlaying4Droid" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -85,3 +85,6 @@ familymart:
   - grasea.familife/xe.UF
   - com.maxincome.fmcrm/com.maxincome.fmonline.Activity.MainActivity
   - jp.co.family.familymart_app/jp.co.family.familymart.presentation.splash.SplashActivity
+
+nowplaying4droid:
+  - com.geckour.nowplaying4droid/com.geckour.nowplaying4droid.app.ui.settings.SettingsActivity
