Add "NURO Mobile" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -88,3 +88,6 @@ familymart:
 
 nowplaying4droid:
   - com.geckour.nowplaying4droid/com.geckour.nowplaying4droid.app.ui.settings.SettingsActivity
+
+nuro_mobile:
+  - jp.nuro.mobile/jp.co.sonynetwork.iot.smarthome.shapp2.MainActivity
