Add "Playbook" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -91,3 +91,6 @@ nowplaying4droid:
 
 nuro_mobile:
   - jp.nuro.mobile/jp.co.sonynetwork.iot.smarthome.shapp2.MainActivity
+
+playbook:
+  - com.goodwy.audiobook/voice.app.features.MainActivity
