Add "残高確認" icon as "Zandaka Kakunin"

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -94,3 +94,6 @@ nuro_mobile:
 
 playbook:
   - com.goodwy.audiobook/voice.app.features.MainActivity
+
+zandaka_kakunin:
+  - digital.cardreader/digital.cardreader.MainActivity
