Update new_icons.yaml (Domino's)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -97,3 +97,9 @@ playbook:
 
 zandaka_kakunin:
   - digital.cardreader/digital.cardreader.MainActivity
+
+dominos:
+  - jp.dominos.android.orderapp/com.arizona.MainActivity
+  - dominos.main/com.iproject.dominos.ui.splash.SplashActivity
+  - br.com.dominos.mobile/br.com.dominos.mobile.MainActivity
+  - com.dominos.latin.america/com.dominos.latin.america.MainActivity
