Update new_icons.yaml (Pizza Hut)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -103,3 +103,13 @@ dominos:
   - dominos.main/com.iproject.dominos.ui.splash.SplashActivity
   - br.com.dominos.mobile/br.com.dominos.mobile.MainActivity
   - com.dominos.latin.america/com.dominos.latin.america.MainActivity
+
+pizza_hut:
+  - com.phdv.universal/com.phdv.universal.feature.main.MainActivity
+  - com.s4d.pizzahut_mx.prd/solutions4delivery.consumerapp.MainActivity
+  - com.pizzahutau/com.pizzahutau.MainActivity
+  - nz.co.pizzahut/com.pizzahut.extra.view.splash.DefaultSplashActivity
+  - com.pizzahut.ksa/com.americana.me.ui.onboarding.splash.SplashActivity
+  - com.sam.ph_mob_app_bd/com.sam.ph_mob_app_bd.MainActivity
+  - pra.hizzahut.com.sv/pra.hizzahut.com.sv.MainActivity
+  - jp.pizzahut.aorder/com.pizzahut.jp.view.splash.SplashActivity
