Add "Milktea" icon

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -113,3 +113,6 @@ pizza_hut:
   - com.sam.ph_mob_app_bd/com.sam.ph_mob_app_bd.MainActivity
   - pra.hizzahut.com.sv/pra.hizzahut.com.sv.MainActivity
   - jp.pizzahut.aorder/com.pizzahut.jp.view.splash.SplashActivity
+
+milktea:
+  - jp.panta.misskeyandroidclient/jp.panta.misskeyandroidclient.MainActivity
