Add icon & Update ComponentInfo (#872)
* Update new_icons.yaml (Pepper)

* Add "FamilyMart" icon

* Add "NowPlaying4Droid" icon

* Add "NURO Mobile" icon

* Add "Playbook" icon

* Add "残高確認" icon as "Zandaka Kakunin"

* Update new_icons.yaml (Domino's)

* Update new_icons.yaml (Pizza Hut)

* Add "Milktea" icon

* Fix & Update appfilter.xml

Fix duplicate "Arknights(JP)" and Add "Azur Lane(JP)"

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -74,3 +74,45 @@ linksheet:
 
 camera:
   - org.codeaurora.snapcar/com.android.camera.CameraLauncher
+
+pepper:
+  - com.tippingcanoe.peppernl/com.pepper.apps.android.presentation.MainActivityDarkIcon
+  - com.chollometro/com.pepper.apps.android.presentation.MainActivityDarkIcon
+  - se.pepperdeals/com.pepper.apps.android.presentation.MainActivityDarkIcon
+  - it.pepper/com.pepper.apps.android.presentation.MainActivityDarkIcon
+
+familymart:
+  - grasea.familife/xe.UF
+  - com.maxincome.fmcrm/com.maxincome.fmonline.Activity.MainActivity
+  - jp.co.family.familymart_app/jp.co.family.familymart.presentation.splash.SplashActivity
+
+nowplaying4droid:
+  - com.geckour.nowplaying4droid/com.geckour.nowplaying4droid.app.ui.settings.SettingsActivity
+
+nuro_mobile:
+  - jp.nuro.mobile/jp.co.sonynetwork.iot.smarthome.shapp2.MainActivity
+
+playbook:
+  - com.goodwy.audiobook/voice.app.features.MainActivity
+
+zandaka_kakunin:
+  - digital.cardreader/digital.cardreader.MainActivity
+
+dominos:
+  - jp.dominos.android.orderapp/com.arizona.MainActivity
+  - dominos.main/com.iproject.dominos.ui.splash.SplashActivity
+  - br.com.dominos.mobile/br.com.dominos.mobile.MainActivity
+  - com.dominos.latin.america/com.dominos.latin.america.MainActivity
+
+pizza_hut:
+  - com.phdv.universal/com.phdv.universal.feature.main.MainActivity
+  - com.s4d.pizzahut_mx.prd/solutions4delivery.consumerapp.MainActivity
+  - com.pizzahutau/com.pizzahutau.MainActivity
+  - nz.co.pizzahut/com.pizzahut.extra.view.splash.DefaultSplashActivity
+  - com.pizzahut.ksa/com.americana.me.ui.onboarding.splash.SplashActivity
+  - com.sam.ph_mob_app_bd/com.sam.ph_mob_app_bd.MainActivity
+  - pra.hizzahut.com.sv/pra.hizzahut.com.sv.MainActivity
+  - jp.pizzahut.aorder/com.pizzahut.jp.view.splash.SplashActivity
+
+milktea:
+  - jp.panta.misskeyandroidclient/jp.panta.misskeyandroidclient.MainActivity
